# pyzonevalidator

./: README.md  README.rst  pyproject.toml
pyzonevalidator/: pyzonevalidator.py
tests/: test_pyzonevalidator.py
