[tool.poetry]
name = "pyzonevalidator"
version = "0.3.2"
description = "Validate DNS Zones programmatically"
readme = "README.md"
authors = ["Teun Ouwehand <teun@nextpertise.nl>"]
homepage = "https://github.com/Nextpertise/pyzonevalidator"
repository = "https://github.com/Nextpertise/pyzonevalidator"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
